<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/dialog_shape"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="22dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_green"
            app:cardCornerRadius="360dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tick_icon"
                android:padding="18dp"
                android:src="@drawable/ic_right" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_title"
            style="@style/DialogTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/successfully_created" />

        <TextView
            style="@style/DialogTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/txt_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:text="@string/congratulations_your_account_has_been_successfully_created"
            android:textColor="@color/label_txt_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="12dp"
            android:background="@color/light_grey" />

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonStyle"
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:backgroundTint="@color/txt_green"
            android:text="@string/ok" />
    </LinearLayout>
</layout>
