<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.unlocktechtask.ui.vm.EntryModuleVm" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="16dp">

            <ImageView
                android:id="@+id/iv_login_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login_banner"
                android:src="@drawable/iv_login_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sign_in"
                style="@style/TitleLabelTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/primary_color"
                app:layout_constraintEnd_toEndOf="@id/iv_login_banner"
                app:layout_constraintStart_toStartOf="@id/iv_login_banner"
                app:layout_constraintTop_toBottomOf="@id/iv_login_banner" />

            <!-- Mobile no and Email-->

            <TextView
                android:id="@+id/txt_email"
                style="@style/LabelTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/mobile_no_username"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/edt_email"
                app:layout_constraintEnd_toEndOf="@id/edt_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/edt_email"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_border"
                android:lines="1"
                android:padding="14dp"
                app:layout_constraintEnd_toEndOf="@id/iv_login_banner"
                app:layout_constraintStart_toStartOf="@+id/iv_login_banner"
                app:layout_constraintTop_toBottomOf="@id/txt_email" />

            <!-- OTP-->
            <TextView
                android:id="@+id/txt_otp"
                style="@style/LabelTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/otp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/edt_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/edt_email"
                app:layout_constraintTop_toBottomOf="@id/edt_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="6dp"
                app:boxCornerRadiusBottomStart="6dp"
                app:boxCornerRadiusTopEnd="6dp"
                app:boxCornerRadiusTopStart="6dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0.6dp"
                app:boxStrokeWidthFocused="0.6dp"
                app:layout_constraintEnd_toEndOf="@id/iv_login_banner"
                app:layout_constraintStart_toStartOf="@+id/iv_login_banner"
                app:layout_constraintTop_toBottomOf="@id/txt_otp"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword|number"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sign In-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/sign_in"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/til_otp"
                app:layout_constraintStart_toStartOf="@id/til_otp"
                app:layout_constraintTop_toBottomOf="@id/til_otp"
                app:layout_constraintVertical_bias="0.0" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>